--- a/sites/all/themes/mukurtu_starter/less/content.less
+++ b/sites/all/themes/mukurtu_starter/less/content.less
@@ -182,8 +182,10 @@
 
         .field-name-field-media-asset,
         .field-name-field-collection-image {
-
           right:0;
+        }
+        .field-name-field-collection-image {
+          float: right;
         }
       }
     }
